--- a/css/css.css
+++ b/css/css.css
@@ -29,11 +29,21 @@ fieldset{
     box-sizing: border-box;
 } 
 
+/*fonction*/
+
+:root{
+    --background:#292F33;
+    --fond3: #B0C4DE;
+    --soustitre:#CCD6DD;
+    --fond6:#FFFFFF;
+    --fond7:#4682B4;
+}
+
 /* class */
 
 .profil{
-    width: 8.6rem;
-    height: 7.4rem;
+    width: 15rem;
+    height: 12rem;
     float: left;
 }
 
@@ -66,12 +76,21 @@ fieldset{
     display: inline-block;
     min-width: 100%;
     text-align: center;
+    background-color: var(--fond7);
+    
+}
+
+
+
+.sommaire:hover{
+    background-color: var(--background);
 }
 
 /* block */
 
 
 h1{
+    margin-top: 3rem;
     text-align: center;
 }
 
@@ -79,11 +98,23 @@ header{
 
     border-width: 0.1rem;
     border-style: outset;
-    border-color: black;
+    border-color: transparent;
     overflow: hidden;
 
 }
 
+body{
+    background-color: var(--background);
+}
+
+
+h4{
+    color: var(--soustitre);
+}
+
+h2, h5, p, li, a{
+    color: var(--fond6);
+}
 figure{
     display: block;
     min-width: 20%;
@@ -92,7 +123,8 @@ figure{
 
 h2{ 
     position: relative;
-    bottom: 2rem;
+    box-shadow: 0 0 1rem var(--background);
+
 }
 
 footer{
@@ -104,19 +136,57 @@ footer{
 section{
     border-width: 0.1rem;
     border-style: outset;
-    border-color: black;
+    border-color: transparent;
     overflow: hidden;
-    margin-bottom: 1rem;
-    margin-top: 1rem;
+    
 }
 
 main{
     border-width: 0.1rem;
     border-style: outset;
-    border-color: black;
+    border-color: transparent;
     overflow: hidden;
-    margin-top: 5rem;
+    min-height: 151.88rem;
 }
+
+header{
+    border-width: 0.1rem;
+    border-style: outset;
+    border-color: transparent;
+    overflow: hidden;
+    min-width: 100%;
+    background-color:var(--fond7);
+}
+
+.sommaire{
+    float: left;
+    text-align: center;
+    padding: 1rem;
+    min-width: 20%;
+    background-color: var(--fond7);
+    box-shadow: 0 0 1rem var(--background);
+}
+
+h2[name= "center"]{
+    background-color: var(--fond7);
+}
+
+section[name="color"]{
+    background-color:#66757F;
+}
+
+section{
+    background-color: #697888;
+}
+
+footer a:hover{
+    color: var(--fond7);
+}
+
+footer a:visited{
+    columns: var(--fond7);
+}
+
 
 
 
