--- a/css/css.css
+++ b/css/css.css
@@ -3,23 +3,28 @@
 html{
     font-size: 62.5%;
 }
+
 body{
     font: 1.6rem 'Montserrat', sans-serif;
     margin: 0;
     line-height: 1.6;
 }
+
 h1,h2,h3,p,figure,ul,ol{
     margin: 0;
     padding: 0;
     font-weight: normal;
 }
+
 input,input[type="submit"], button{
     border: 0;
     background-color: transparent;
     font-size: inherit;
 }
+
 a{
     text-decoration: none;
+   
     color: #222;
 }
 fieldset{
@@ -62,6 +67,16 @@ fieldset{
 
 }
 
+.box2{
+
+    margin-top: 2rem;
+    float: left;
+    min-width: 50%;
+    min-height: 84rem;
+    text-align: center;
+    background-color:#66757F;
+}
+
 .align{
     
     float: left;
@@ -72,6 +87,16 @@ fieldset{
     
 }
 
+.align2{
+
+    float: left;
+    min-height: 20rem;
+    min-width: 50%;
+    text-align: center;
+    position: static;
+    background-color:#66757F;
+}
+
 .center{
     display: inline-block;
     min-width: 100%;
@@ -79,66 +104,10 @@ fieldset{
     background-color: var(--fond7);
     
 }
-
-
-
-.sommaire:hover{
-    background-color: var(--background);
-}
-
 /* block */
-
-
-h1{
-    margin-top: 3rem;
-    text-align: center;
-}
-
-header{
-
-    border-width: 0.1rem;
-    border-style: outset;
-    border-color: transparent;
-    overflow: hidden;
-
-}
 
 body{
     background-color: var(--background);
-}
-
-
-h4{
-    color: var(--soustitre);
-}
-
-h2, h5, p, li, a{
-    color: var(--fond6);
-}
-figure{
-    display: block;
-    min-width: 20%;
-    float: left;
-}
-
-h2{ 
-    position: relative;
-    box-shadow: 0 0 1rem var(--background);
-
-}
-
-footer{
-    text-align: center;
-    text-transform: capitalize;
-    
-    }
-
-section{
-    border-width: 0.1rem;
-    border-style: outset;
-    border-color: transparent;
-    overflow: hidden;
-    
 }
 
 main{
@@ -149,34 +118,99 @@ main{
     min-height: 151.88rem;
 }
 
+
 header{
+
     border-width: 0.1rem;
     border-style: outset;
     border-color: transparent;
     overflow: hidden;
     min-width: 100%;
     background-color:var(--fond7);
+
 }
 
-.sommaire{
-    float: left;
+h1{
+    margin-top: 3rem;
     text-align: center;
-    padding: 1rem;
-    min-width: 20%;
+}
+
+nav{
+    text-align: center;
+    
+}
+nav ul {
+    list-style-type: none;
+    margin: 0;
+    list-style-type: none;
+    overflow: hidden;
+    position: -webkit-sticky; /* Safari */
+    position: sticky;
+    top: 0;
     background-color: var(--fond7);
+  }
+  
+nav li {
+    float: left;
+    border-width: 0.1rem;
+    border-style: outset;
+    border-color: transparent;
     box-shadow: 0 0 1rem var(--background);
-}
+    min-width: 25%;
+    
+  }
+  
+nav  li a {
+    display: block;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+  }
+  
 
-h2[name= "center"]{
-    background-color: var(--fond7);
-}
-
-section[name="color"]{
-    background-color:#66757F;
-}
+nav li a:hover {
+    background-color: var(--background);
+  }
 
 section{
+    border-width: 0.1rem;
+    border-style: outset;
+    border-color: transparent;
+    overflow: hidden;
     background-color: #697888;
+    
+}
+
+
+h2{ 
+    position: relative;
+    box-shadow: 0 0 1rem var(--background);
+
+}
+
+h2[id= "expertises"]{
+    background-color: var(--fond7);
+}
+
+h2, h5, p, li, a{
+    color: var(--fond6);
+}
+
+
+h4{
+    color: var(--soustitre);
+}
+
+figure{
+    display: block;
+    min-width: 20%;
+    float: left;
+}
+
+footer{
+    text-align: center;
+    text-transform: capitalize;
+    
 }
 
 footer a:hover{
@@ -186,15 +220,3 @@ footer a:hover{
 footer a:visited{
     columns: var(--fond7);
 }
-
-
-
-
-
-
-
-
-
-
-
-
