--- a/css/css.css
+++ b/css/css.css
@@ -1,5 +1,5 @@
 /*reset css*/
-
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Varela+Round&display=swap');
 html{
     font-size: 62.5%;
 }
@@ -40,7 +40,7 @@ fieldset{
     --background:#292F33;
     --fond3: #B0C4DE;
     --soustitre:#CCD6DD;
-    --fond6:#FFFFFF;
+    --fond6:#ffffff;
     --fond7:#4682B4;
 }
 
@@ -49,6 +49,7 @@ fieldset{
 .profil{
     width: 15rem;
     height: 12rem;
+    border-radius: 50%;
     float: left;
 }
 
@@ -57,12 +58,13 @@ fieldset{
     width: 10rem;
     height: 10rem;
     border: 0.1rem #23282d solid;
+    border-radius: 50%;
 }
 .box{
     margin-top: 2rem;
     float: left;
-    min-width: 50%;
-    min-height: 84rem;
+    max-width: 50%;
+    min-height: 86rem;
     text-align: center;
 
 }
@@ -72,7 +74,7 @@ fieldset{
     margin-top: 2rem;
     float: left;
     min-width: 50%;
-    min-height: 84rem;
+    min-height: 86rem;
     text-align: center;
     background-color:#66757F;
 }
@@ -80,8 +82,9 @@ fieldset{
 .align{
     
     float: left;
-    min-height: 20rem;
+    min-height: 25rem;
     min-width: 50%;
+    margin-top: 0.5rem;
     text-align: center;
     position: static;
     
@@ -90,8 +93,9 @@ fieldset{
 .align2{
 
     float: left;
-    min-height: 20rem;
+    min-height: 25rem;
     min-width: 50%;
+    margin-top: 0.5rem;
     text-align: center;
     position: static;
     background-color:#66757F;
@@ -102,6 +106,7 @@ fieldset{
     display: inline-block;
     min-width: 100%;
     text-align: center;
+    margin-top: 1rem;
     background-color: var(--fond7);
     
 }
@@ -132,7 +137,6 @@ h1{
 nav ul {
     list-style-type: none;
     margin: 0;
-    list-style-type: none;
     overflow: hidden;
     background-color: var(--fond7);
     position: sticky;
@@ -153,12 +157,14 @@ nav  li a {
     display: block;
     text-align: center;
     padding: 1.4rem 1.6rem;
+    color:rgb(0, 0, 0);
     text-decoration: none;
   }
   
 
 nav li a:hover {
     background-color: var(--background);
+    color: rgb(255, 255, 255);
   }
 
 main{
@@ -179,7 +185,9 @@ section{
     
 }
 
-
+h3{
+    color: rgb(255, 255, 255);
+}
 h2{ 
     position: relative;
     box-shadow: 0 0 1rem var(--background);
@@ -196,13 +204,23 @@ h2, h5, p, li, a{
 
 
 h4{
-    color: var(--soustitre);
+    color:rgb(255, 255, 255);
 }
 
 figure{
     display: block;
+    padding-top: 2rem;
     min-width: 20%;
     float: left;
+}
+
+figcaption p{
+    color: rgb(0, 0, 0);
+}
+
+ul{
+    list-style-type: none;
+    padding-top: 2rem;
 }
 
 footer{
@@ -213,8 +231,77 @@ footer{
 
 footer a:hover{
     color: var(--fond7);
+
 }
 
 footer a:visited{
     columns: var(--fond7);
+}
+
+
+
+/* responsive */
+@media screen and (max-width: 80.00rem){
+
+    section{
+
+        min-width: 42.8rem;
+    }
+
+    nav ul {
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+        background-color: var(--background);
+        
+    }
+      
+    nav li a {
+        display: block;
+        min-width: 42.8rem;
+        color: white;
+        text-decoration: none;
+      }
+      
+      /* Change the link color on hover */
+    nav li a:hover {
+        background-color: var(--fond7);
+        color: white;
+    }
+
+    .center{
+        display: block;
+        text-align: center;
+        float: left;
+        margin-top: 1rem;
+        background-color: var(--fond7);
+        
+    }
+
+    h2[id= "expertises"]{
+        background-color: var(--fond7);
+    }
+
+    .align2{
+
+        min-width: 42.8rem;
+    }
+    
+    .align{
+        
+        min-width: 42.8rem;
+    }
+
+    figure{
+        min-width: 42.8rem;
+    }
+
+
+    .profil{
+        padding-top: 1rem;
+        width: 20rem;
+        height: 17rem;
+        float: left;
+    }
+
 }
