--- a/css/style.css
+++ b/css/style.css
@@ -65,7 +65,6 @@ fieldset{
     margin-top: 2rem;
     float: left;
     max-width: 50%;
-    min-height: 86rem;
     text-align: center;
 
 }
@@ -75,7 +74,6 @@ fieldset{
     margin-top: 2rem;
     float: left;
     min-width: 50%;
-    min-height: 86rem;
     text-align: center;
     background-color:#66757F;
 }
@@ -127,6 +125,12 @@ header{
     min-width: 100%;
     background-color:var(--fond7);
 
+}
+
+header img{
+    position: static;
+    margin-left: 65rem;
+    margin-right: 70rem;
 }
 
 h1{
@@ -187,7 +191,7 @@ section{
 }
 
 h3{
-    color: rgb(255, 255, 255);
+   padding-top: 2rem;
 }
 h2{ 
     position: relative;
@@ -199,20 +203,24 @@ h2[id= "expertises"]{
     background-color: var(--fond7);
 }
 
-h2, h5, p, li, a{
+h2,h3, h4, h5, p, li, a{
     color: var(--fond6);
 }
 
 
-h4{
-    color:rgb(255, 255, 255);
-}
+
+
 
 figure{
     display: block;
     padding-top: 2rem;
     min-width: 20%;
     float: left;
+    
+}
+
+figure img{
+    background: #ffffff;
 }
 
 figcaption p{
@@ -315,6 +323,7 @@ footer a:visited{
     figure{
         text-align: center;
         min-width: 50%;
+       
     }
 
  
@@ -343,12 +352,12 @@ footer a:visited{
 @media screen and (orientation: landscape){
 
     .box2{
-        min-height: 90.5rem;
+        min-height: 101rem;
     }
 
     .box{
 
-        min-height: 90.5rem;
+        min-height: 101rem;
     }
 
     .align{
@@ -356,6 +365,10 @@ footer a:visited{
     }
     .align2{
         min-width: 50%;
+    }
+
+    h1{
+        margin-top: 5rem;
     }
 
 }
