--- a/css/style.css
+++ b/css/style.css
@@ -353,12 +353,14 @@ footer a:visited{
 
     .box2{
         min-width: 50%;
-        min-height: 101rem;
+        max-width: 50%;
+        min-height: 120rem;
     }
 
     .box{
         min-width: 50%;
-        min-height: 101rem;
+        max-width: 50%;
+        min-height: 120rem;
     }
 
     .align{
