--- a/css/style.css
+++ b/css/style.css
@@ -234,6 +234,8 @@ ul{
 footer{
     text-align: center;
     text-transform: capitalize;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
     
 }
 
